k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: devops-practice.com
      # run => kubectl get pods --namespace=ingress-nginx
      # if => No resources found in ingress-nginx namespace
      # run => kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.0/deploy/static/provider/cloud/deploy.yaml
      # go to => C:\Windows\System32\Drivers\etc\hosts or sudo vim /etc/hosts
      # add => 127.0.0.1 devops-practice.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5000
  ingressClassName: nginx
